syntax = "proto3";

package userLogin;

service LoginService {
  rpc LoginUser(UserRequest) returns (UserResponse);
}

message User {
    string username = 1;
    string email = 2;
    string password = 3;
  }

message UserRequest {
  string email = 1;
  string password = 2;
}

message UserResponse {
    bool success = 1;
    string message = 2;
    User user_data = 3;
}